--- a/자바수업 내용정리.md
+++ b/자바수업 내용정리.md
@@ -1,16 +1,16 @@
 # 프로그래밍 언어
 
-java, web service application [Backend: Spring]
-javascript(js), web service application [Backend: exprss.js]
-javascript(js), web service application [frontend: vue.js, react, angular.js]
-python, web service application [dJango, flask]
+1. java, web service application [Backend: Spring]
+2. javascript(js), web service application [Backend: exprss.js]
+3. javascript(js), web service application [frontend: vue.js, react, angular.js]
+4. python, web service application [dJango, flask]
 
 # 이클립스 설정
 
- 환경변수 편집은 필수!
+환경변수 편집은 필수!
  
- 1. workspace&project의 경로 설정하기
- 2. 기본설정(window - Preferences)
+1. workspace&project의 경로 설정하기
+2. 기본설정(window - Preferences)
      - encoding 설정
         general 탭에서 content types에서 text 열기
         text는 UTF-8로 업데이트
@@ -18,8 +18,8 @@ python, web service application [dJango, flask]
         하단 항목 중 JSP는 UTF-8로 업데이트
       - spelling 
          Enable spell checking 체크박스 해제
- 3. 기본설정(window - Preferences - Java)
+3. 기본설정(window - Preferences - Java)
      - 하단 항목의 Compiler에서 Compiler compliance level를 12로 수정
      - 하단 항목의 Installed JTEs에서 경로를 C:\Program Files\Java\jdk-12.0.2 수정 (단, java의 설치위로 지정해야함)
- 4. 
- 5. 
+4. 
+5. 
