--- a/자바수업 내용정리.md
+++ b/자바수업 내용정리.md
@@ -1,12 +1,14 @@
-# 1. 프로그래밍 언어
-=========================
+JAVA 언어 및 기본설정
+==========================
+1. 프로그래밍 언어
+-------------------
 1. java, web service application [Backend: Spring]
 2. javascript(js), web service application [Backend: exprss.js]
 3. javascript(js), web service application [frontend: vue.js, react, angular.js]
 4. python, web service application [dJango, flask]
 
-# 2. 이클립스 설정
-===============================
+2. 이클립스 설정
+-----------------------
 환경변수 편집은 필수!
  
 2.1 workspace&project의 경로 설정하기
