--- a/자바수업 내용정리.md
+++ b/자바수업 내용정리.md
@@ -10,12 +10,13 @@ JAVA 언어 및 기본설정
 이클립스 설정
 -----------------------
 **환경변수 편집은 필수!**
+
 1. workspace&project의 경로 설정하기
-2.2 기본설정(window - Preferences)
-2.2.1 encoding 설정
-     general 탭에서 content types에서 text 열기 text는 UTF-8로 업데이트
-    하단 항목 중 Java Properties File은 ISO-8859-1로 유지   
-    하단 항목 중 JSP는 UTF-8로 업데이트
+2. 기본설정(window - Preferences)
+ - encoding 설정
+  - general 탭에서 content types에서 text 열기 text는 UTF-8로 업데이트
+  - 하단 항목 중 Java Properties File은 ISO-8859-1로 유지   
+  - 하단 항목 중 JSP는 UTF-8로 업데이트
  
 2.2.2 spelling 
 
