--- a/자바수업 내용정리.md
+++ b/자바수업 내용정리.md
@@ -17,10 +17,9 @@ JAVA 언어 및 기본설정
    - general 탭에서 content types에서 text 열기 text는 UTF-8로 업데이트  
    - 하단 항목 중 Java Properties File은 ISO-8859-1로 유지   
    - 하단 항목 중 JSP는 UTF-8로 업데이트
- 
+    
 2.2. spelling 
-
-    Enable spell checking 체크박스 해제
+   - Enable spell checking 체크박스 해제
  
 2.3 기본설정(window - Preferences - Java)
     하단 항목의 Compiler에서 Compiler compliance level를 12로 수정 
