--- a/자바수업 내용정리.md
+++ b/자바수업 내용정리.md
@@ -22,3 +22,17 @@ JAVA 언어 및 기본설정
     - 기본설정(window - Preferences - Java)    
         - 하단 항목의 Compiler에서 Compiler compliance level를 12로 수정 
         - 하단 항목의 Installed JTEs에서 경로를 C:\Program Files\Java\jdk-12.0.2 수정 (단, java의 설치위로 지정해야함)
+
+java 221024 ~ 221025 내용정리
+-------------------------------
+상속의 장점
+1. 확장성
+2. 재사용
+
+추상 메소드, 추상 클래스 조건
+추상 클래스는 new를 붙힐 수 없다.
+이유는 공통된 속성이 여러 객체에 적용할 떄 세부적인 구현이 불가함
+
+    포유류(움직인다[공통])----사람 ([공통], 2발로 걷는다)
+                         ----개  ([공통], 4발로 걷는다)
+                        ----고래 ([공통], 헤엄친다)
