--- a/자바수업 내용정리.md
+++ b/자바수업 내용정리.md
@@ -36,3 +36,9 @@ java 221024 ~ 221025 내용정리
     포유류(움직인다[공통])----사람 ([공통], 2발로 걷는다)
                          ----개  ([공통], 4발로 걷는다)
                         ----고래 ([공통], 헤엄친다)
+                        
+추상 조건
+1. 포유류 m = new 사람() 을 만족
+2. 오버라이드, 다형성 조건만족    
+(움직이다 한 개로 객체의 종류에 따라 여러가지로 해석)
+*오버라이드: 부모의 있는 구현을 다시 사용.. 부모가 아닌 자식에서 호출됨
