--- a/자바수업 내용정리.md
+++ b/자바수업 내용정리.md
@@ -40,5 +40,14 @@ java 221024 ~ 221025 내용정리
 추상 조건
 1. 포유류 m = new 사람() 을 만족
 2. 오버라이드, 다형성 조건만족    
-(움직이다 한 개로 객체의 종류에 따라 여러가지로 해석)
-*오버라이드: 부모의 있는 구현을 다시 사용.. 부모가 아닌 자식에서 호출됨
+(움직이다 한 개로 객체의 종류에 따라 여러가지로 해석)    
+*오버라이드: 부모의 있는 구현을 다시 사용.. 부모가 아닌 자식에서 호출됨   
+
+
+자바 구성
+1. 클래스--변수, 메소드, 생성자
+2. 정보은닉---캡슐화
+3. 상속
+4. 다형성---오버로딩, 오버라이딩
+5. 추상클래스---인터페이스
+6. API
