--- a/자바수업 내용정리.md
+++ b/자바수업 내용정리.md
@@ -51,3 +51,19 @@ java 221024 ~ 221025 내용정리
 4. 다형성---오버로딩, 오버라이딩
 5. 추상클래스---인터페이스
 6. API
+
+class-변수
+---------------------------
+접근자 제어
+1. 접근자 제어 범위
+    - private
+        - 내부에서만 접근가능(정보은닉)
+        - 메인에서 외부로 접근하려면 메소드를 세팅하기 ex) [private void setName]
+    - protected
+        - 자식에서 접근이 가능 (부모에 protected 생성)
+    - (default)
+        - 같은 패키지안에서만
+    - public
+        - 제한없음
+
+
