--- a/자바수업 내용정리.md
+++ b/자바수업 내용정리.md
@@ -66,4 +66,24 @@ class-변수
     - public
         - 제한없음
 
+class-method
+--------------
+signiture => 파라미터의 개수, 타입, 순서가 일치해야 시그니처가 같다.
 
+오버로딩
+```
+void m(int a, double d)
+void m(double d, int a)
+```
+
+타입이 다르므로 같은 클라스 내에서 사용이 가능하다.
+
+오버라이딩
+
+```
+void m(int a, double d)
+void m(int b, double d)
+```
+
+서로 같은 타입이므로 같은 클라스 내에서 사용이 불가능하다.   
+(단, 부모와 자식에 각각 흩어져 있으면 생성이 가능)
