--- a/자바수업 내용정리.md
+++ b/자바수업 내용정리.md
@@ -70,7 +70,7 @@ class-method
 --------------
 signiture => 파라미터의 개수, 타입, 순서가 일치해야 시그니처가 같다.
 
-오버로딩
+####오버로딩
 ```
 void m(int a, double d)
 void m(double d, int a)
@@ -78,7 +78,8 @@ void m(double d, int a)
 
 타입이 다르므로 같은 클라스 내에서 사용이 가능하다.
 
-오버라이딩
+
+####오버라이딩
 
 ```
 void m(int a, double d)
