--- a/자바수업 내용정리.md
+++ b/자바수업 내용정리.md
@@ -87,3 +87,53 @@ void m(int b, double d)
 
 서로 같은 타입이므로 같은 클라스 내에서 사용이 불가능하다.   
 (단, 부모와 자식에 각각 흩어져 있으면 생성이 가능)
+
+
+
+----------1026 메소드 내용 추가---------------------
+call function by value 로 넘겨주면 변동이 없음(파라미터)
+
+
+call function by reference  로 넘겨주면 변동이 있음(파라미터)
+
+
+-------------------------------------------------------------
+생성자
+생성자: 객체의 초기화 담당
+객체를 생성할 때
+set or 생성자로 생성
+오버로딩은 하나의 클래스에서만 일어난다. (클래스와 다형성)
+--------------------------------------------------------------------
+상속을 하는 이유
+재사용성
+최상위 클래스는 object
+----------------------------------------------------------------------
+10월 27일 정리 할 것
+Tv 내용 정리
+----------------------------------------------------------
+패키지
+구조와 클래스 사용 시 충돌 방지
+
+
+hash heap stack 클래스 파라미터 도메인 (branch등 깃 개념 찾아보기)
+
+
+
+객체(오브젝트)는 속성(정보)과 기능의 집합, 속성과 기능을 객체의 맴버(구성요소) 라고한다.
+속성은 필드, 기능은 메소드
+객체는 물리적 존재, 추상적 존재를 모두 포함
+
+ex) 물리적존재 학생, 회원, 추상적 존재 생산 주문 배송
+속성(필드)은 이름, 나이 등, 기능 메소드는 달리다 등 동작을 의미
+
+인스턴스 = 객체인데 객체가 메모리에 할당되어 실제 사용될 떄 인스턴스라고함
+
+클래스는 객체를 정의해 놓은 것
+클래스는 객체를 생성하는데 사용
+
+
+
+
+
+
+
